--- a/WpfStudentChat/Views/Pages/ContactsPage.xaml
+++ b/WpfStudentChat/Views/Pages/ContactsPage.xaml
@@ -10,6 +10,7 @@
       xmlns:bp="clr-namespace:EleCho.WpfUtilities;assembly=EleCho.WpfUtilities.BindingProxy"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
+      d:Background="White"
       Title="ContactsPage"
       d:DataContext="{d:DesignInstance Type=local:ContactsPage}">
 
@@ -43,16 +44,16 @@
                         <Button HorizontalAlignment="Stretch"
                                 Content="Create group"
                                 Padding="0 3"
-                                Margin="0 1 0 0"
+                                Margin="0 3 0 0"
                                 Command="{Binding ShowCreateGroupWindowCommand}"/>
                         <Button HorizontalAlignment="Stretch"
                                 Content="Friend requests"
                                 Padding="0 3"
-                                Margin="0 1 0 0"/>
+                                Margin="0 3 0 0"/>
                         <Button HorizontalAlignment="Stretch"
                                 Content="Group requests"
                                 Padding="0 3"
-                                Margin="0 1 0 0"/>
+                                Margin="0 3 0 0"/>
                     </StackPanel>
 
                     <Border Height=".8"
