--- a/WpfStudentChat/Views/Pages/PrivateMessagesPage.xaml
+++ b/WpfStudentChat/Views/Pages/PrivateMessagesPage.xaml
@@ -47,7 +47,8 @@
                               VerticalScrollBarVisibility="Visible"
                               CanContentScroll="True">
                     <ItemsControl ItemsSource="{Binding ViewModel.Session.Messages}"
-                                  Margin="12 0">
+                                  Margin="12 0"
+                                  FocusVisualStyle="{x:Null}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate DataType="comm:PrivateMessage">
                                 <Grid x:Name="MessageBox"
@@ -130,6 +131,7 @@
             <Grid Grid.Row="2">
                 <ui:TextBox AcceptsReturn="True"
                             TextWrapping="Wrap"
+                            BorderThickness="0 1 0 0"
                             Text="{Binding ViewModel.TextInput,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
                     <ui:TextBox.InputBindings>
                         <KeyBinding Gesture="Control+Enter" Command="{Binding SendMessageCommand}"/>
@@ -138,7 +140,7 @@
                 <ui:Button VerticalAlignment="Bottom"
                            HorizontalAlignment="Right"
                            Margin="12"
-                           Content="Send"
+                           Content="发送"
                            Command="{Binding SendMessageCommand}"/>
             </Grid>
         </Grid>
