--- a/WpfStudentChat/Views/Windows/MainWindow.xaml
+++ b/WpfStudentChat/Views/Windows/MainWindow.xaml
@@ -28,20 +28,24 @@
     </b:Interaction.Triggers>
 
     <DockPanel>
-        <ui:TitleBar
-            DockPanel.Dock="Top"
-            Background="Transparent"
-            Title="{Binding ViewModel.ApplicationTitle}"
-            Icon="pack://application:,,,/Assets/wpfui-icon-256.png"/>
+        <Border DockPanel.Dock="Top"
+                BorderThickness="0 0 0 1"
+                BorderBrush="{DynamicResource TextFillColorDisabledBrush}">
+            <ui:TitleBar Background="Transparent"
+                         Title="{Binding ViewModel.ApplicationTitle}"
+                         Icon="pack://application:,,,/Assets/wpfui-icon-256.png"/>
+        </Border>
 
         <Border DockPanel.Dock="Left"
-                Background="#88FFFFFF">
+                Background="#33FFFFFF"
+                BorderThickness="0 0 1 0"
+                BorderBrush="{DynamicResource TextFillColorDisabledBrush}">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Border Width="42" Height="42" Margin="0 0 0 8"
+                <Border Width="42" Height="42" Margin="0 8"
                         CornerRadius="5"
                         Background="#33000000">
                     <b:Interaction.Triggers>
